--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "browser": {
     "fs": false,
     "path": false,
-    "os": false
+    "os": false,
+    "child_process": false
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
