--- a/package.json
+++ b/package.json
@@ -4,15 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint"
-  },
-  "browser": {
-    "fs": false,
-    "path": false,
-    "os": false,
-    "child_process": false
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
@@ -22,11 +16,11 @@
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
-    "bcrypt": "^5.1.0",
+    "bcrypt": "^5.0.1",
     "date-fns": "^2.30.0",
     "eslint": "8.44.0",
-    "eslint-config-next": "13.4.8",
-    "generate": "^0.14.0",
+    "eslint-config-next": "^12.0.4",
+    "generate": "^0.10.0",
     "next": "13.4.8",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
